...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/editText_name_registrationName"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_signUp_signUpText"
        app:layout_constraintVertical_bias="0.027"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText_name_user"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationName"
        app:layout_constraintVertical_bias="0.04"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText_name_registrationPass"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name_user"
        app:layout_constraintVertical_bias="0.042"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText_name_registrationConfirmPass"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationConfirmPass"
        app:layout_constraintVertical_bias="0.077"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText_name_registrationSecurityAnswer"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
...
        android:textColorHint="@color/whiteBtn"
        android:textColorLink="@color/colorAccent"
        android:textCursorDrawable="@drawable/cursor_colour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_signUp_securityQuestions"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button_signUp_registerbutton"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:onClick="signUpBtnClickRegister"
...
