...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.11"/>

    <EditText
            android:id="@+id/editText_forgetPassword_userName"
            android:layout_width="254dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="476dp"
...
            app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_resetPasswordText"
            app:layout_constraintVertical_bias="0.74"
            tools:targetApi="o"/>


    <EditText
            android:id="@+id/editText_forgetPassword_securityAnswer"
            android:layout_width="254dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_securityQuestion"
            app:layout_constraintVertical_bias="0.057"
            tools:targetApi="o"/>

    <Button
            android:id="@+id/getSecuriityQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="408dp"
            android:background="@android:drawable/editbox_background"
...
            android:text="@string/getSecurityQuestion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/answeredSecurityQuestionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="156dp"
...
